--- a/requirements.txt
+++ b/requirements.txt
@@ -16,13 +16,14 @@ async-lru==2.0.5
 attrs==25.3.0
 babel==2.17.0
 beautifulsoup4==4.13.3
+black==25.1.0
 bleach==6.2.0
 blinker==1.9.0
 boto3==1.37.37
 botocore==1.37.37
 cachetools==5.5.2
 cattrs==24.1.3
-certifi==2025.1.31
+certifi==2025.6.15
 cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.1
@@ -32,6 +33,7 @@ colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.1
 cover-agent @ git+https://github.com/Codium-ai/cover-agent.git@9772720361c94abe29b71af1d5e0c44d33ce02fa
+coverage==7.9.1
 cycler==0.12.1
 datasets==3.6.0
 debugpy==1.8.13
@@ -49,10 +51,12 @@ executing==2.2.0
 fastjsonschema==2.21.1
 feedparser==6.0.11
 filelock==3.18.0
+flake8==7.3.0
 flatbuffers==25.2.10
 fonttools==4.57.0
 forex-python==1.9.2
 fqdn==1.5.1
+freezegun==1.5.2
 frozenlist==1.6.0
 fsspec==2025.3.2
 gast==0.6.0
@@ -84,6 +88,7 @@ httpx-sse==0.4.0
 huggingface-hub==0.30.1
 idna==3.10
 importlib_metadata==8.6.1
+iniconfig==2.1.0
 ipykernel==6.29.5
 ipython==9.1.0
 ipython_pygments_lexers==1.1.1
@@ -118,13 +123,17 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
+mccabe==0.7.0
 mcp==1.9.1
 mdurl==0.1.2
+memory-profiler==0.61.0
 mistune==3.1.3
 ml_dtypes==0.5.1
 mpmath==1.3.0
 multidict==6.4.3
 multiprocess==0.70.16
+mypy==1.16.1
+mypy_extensions==1.1.0
 namex==0.0.9
 narwhals==1.32.0
 nbclient==0.10.2
@@ -140,6 +149,7 @@ openai-agent==0.1.0
 openai-agents==0.0.17
 opt_einsum==3.4.0
 optree==0.15.0
+outcome==1.3.0.post0
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -162,19 +172,27 @@ protobuf==5.29.4
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+py-cpuinfo==9.0.0
 pyarrow==19.0.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 PyAudio==0.2.14
+pycodestyle==2.14.0
 pycparser==2.22
-pydantic==2.11.0
+pydantic==2.11.7
 pydantic-settings==2.9.1
-pydantic_core==2.33.0
+pydantic_core==2.33.2
 pydeck==0.9.1
+pyflakes==3.4.0
 pygls==1.3.1
 Pygments==2.19.1
 pyparsing==3.2.3
 PyPDF2==3.0.1
+PySocks==1.7.1
+pytest==8.4.1
+pytest-benchmark==5.1.0
+pytest-cov==6.2.1
+pytest-mock==3.14.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-json-logger==3.3.0
@@ -185,6 +203,7 @@ pyzmq==26.4.0
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
+requests-mock==1.12.1
 responses==0.25.7
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
@@ -197,6 +216,7 @@ s3transfer==0.11.5
 safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.15.2
+selenium==4.33.0
 Send2Trash==1.8.3
 sentry-sdk==2.26.1
 setproctitle==1.3.5
@@ -208,6 +228,7 @@ simplejson==3.20.1
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
+sortedcontainers==2.4.0
 sounddevice==0.5.2
 soupsieve==2.6
 SQLAlchemy==2.0.40
@@ -223,6 +244,7 @@ termcolor==3.1.0
 terminado==0.18.1
 threadpoolctl==3.6.0
 tiktoken==0.8.0
+timeout-decorator==0.5.0
 tinycss2==1.4.0
 tokenizers==0.21.1
 toml==0.10.2
@@ -236,25 +258,29 @@ traitlets==5.14.3
 transformers==4.51.0
 tree-sitter==0.21.3
 tree-sitter-languages==1.10.2
+trio==0.30.0
+trio-websocket==0.12.2
 tsne-torch==1.0.1
 types-python-dateutil==2.9.0.20241206
 types-requests==2.32.0.20250328
 typing-inspection==0.4.0
-typing_extensions==4.13.0
+typing_extensions==4.13.2
 tzdata==2025.2
 uri-template==1.3.0
-urllib3==2.3.0
+urllib3==2.4.0
 uvicorn==0.34.2
 wandb==0.17.9
 watchdog==6.0.0
 wcwidth==0.2.13
 webcolors==24.11.1
+webdriver-manager==4.0.2
 webencodings==0.5.1
 websocket-client==1.8.0
 websockets==15.0.1
 Werkzeug==3.1.3
 wheel==0.45.1
 wrapt==1.17.2
+wsproto==1.2.0
 xxhash==3.5.0
 yarl==1.20.0
 zipp==3.21.0
