--- a/requirements.txt
+++ b/requirements.txt
@@ -124,7 +124,7 @@ MarkupSafe==3.0.2
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
 mccabe==0.7.0
-mcp==1.9.1
+mcp==1.9.4
 mdurl==0.1.2
 memory-profiler==0.61.0
 mistune==3.1.3
@@ -143,10 +143,9 @@ nest-asyncio==1.6.0
 networkx==3.4.2
 notebook==7.3.3
 notebook_shim==0.2.4
-numpy==2.3.0
-openai==1.86.0
-openai-agent==0.1.0
-openai-agents==0.0.17
+numpy==1.26.4
+openai==1.91.0
+openai-agents==0.0.19
 opt_einsum==3.4.0
 optree==0.15.0
 outcome==1.3.0.post0
@@ -190,6 +189,7 @@ pyparsing==3.2.3
 PyPDF2==3.0.1
 PySocks==1.7.1
 pytest==8.4.1
+pytest-asyncio==1.0.0
 pytest-benchmark==5.1.0
 pytest-cov==6.2.1
 pytest-mock==3.14.1
@@ -267,7 +267,7 @@ typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzdata==2025.2
 uri-template==1.3.0
-urllib3==2.4.0
+urllib3==2.5.0
 uvicorn==0.34.2
 wandb==0.17.9
 watchdog==6.0.0
